# epicsdb2bob

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/epicsdb2bob/: __main__.py  bobfile_gen.py  config.py  parser.py  utils.py
tests/: conftest.py  test_bobfilegen.py  test_cli.py  test_parser.py
tests/inputs/: compound_db.db  db_with_readbacks.db  example_sub.substitutions  simple_db.db
tests/outputs/: compound_db.bob  db_with_readbacks.bob  example_sub.bob  simple_db.bob
